feat: add item exploration
